--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="normalize.css">
+    <title>My Library</title>
 </head>
 <body>
-    
+    <div class="sidebar">
+        <div class="top">
+            <img id="logo" src="library-outline.svg" aria-hidden="true" alt="Library Logo">
+            <h1>My Library</h1>
+        </div>
+        <form action="#" aria-description="Input book information to have a table of all the books in your library">
+                    <div>
+                        <label for="title">Title: <span aria-label="required"></span></label>
+                        <input id="title" type="text" name="title" required>
+                    </div>
+                    <div>
+                        <label for="author">Password: <span aria-label="required"></span></label>
+                        <input id="author" type="text" name="author" required>
+                    </div>
+                    <div>
+                        <label for="pages">Number of Pages: <span aria-label="required"></span></label>
+                        <input id="pages" type="number" name="pages" min="0" max="99999" required>
+                    </div>
+                    <div>
+                        <p>Did you finish the book?</p>
+                        <input type="radio" id="yes" name="yes" value="yes">
+                        <label for="yes">Yes</label><br>
+                        <input type="radio" id="no" name="no" value="no">
+                        <label for="no">No</label><br>  
+                    </div>
+                <button type="submit"><h2>Add New Book</h2></button>
+        </form>
+    </div>
+    <div class="main">
+        <table>
+
+        </table>
+    </div>
 </body>
 </html>
