formatting elements and styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="sidebar">
         <div class="top">
             <img id="logo" src="library-outline.svg" aria-hidden="true" alt="Library Logo">
-            <h1>My Library</h1>
+            <h1>Library</h1>
         </div>
         <form action="#" aria-description="Input book information to have a table of all the books in your library">
                     <div>
@@ -27,7 +27,7 @@
                         <label for="pages">Number of Pages: <span aria-label="required"></span></label>
                         <input id="pages" type="number" name="pages" min="0" max="99999" required>
                     </div>
-                    <div>
+                    <div id="radio">
                         <p>Did you finish the book?</p>
                         <input type="radio" id="yes" name="yes" value="yes">
                         <label for="yes">Yes</label><br>
