--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
                         <input id="title" type="text" name="title" required>
                     </div>
                     <div>
-                        <label for="author">Password: <span aria-label="required"></span></label>
+                        <label for="author">Author: <span aria-label="required"></span></label>
                         <input id="author" type="text" name="author" required>
                     </div>
                     <div>
-                        <label for="pages">Number of Pages: <span aria-label="required"></span></label>
+                        <label for="pages">Number of pages: <span aria-label="required"></span></label>
                         <input id="pages" type="number" name="pages" min="0" max="99999" required>
                     </div>
                     <div id="radio">
-                        <p>Did you finish the book?</p>
+                        <label>Did you finish the book?</label><br>
                         <input type="radio" id="yes" name="yes" value="yes">
                         <label for="yes">Yes</label><br>
                         <input type="radio" id="no" name="no" value="no">
