formatting html and css for table

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                             <label id="radio-label">Did you finish the book?</label><br>
                         </div>
                         <div>
-                            <input type="radio" id="yes" name="yes" value="yes">
+                            <input type="radio" id="yes" name="read" value="yes" required>
                             <label for="yes">Yes</label><br>    
                         </div>
                         <div>
-                            <input type="radio" id="no" name="no" value="no">
+                            <input type="radio" id="no" name="read" value="no" required>
                             <label for="no">No</label><br>  
                         </div>
                     </div>
@@ -45,7 +45,38 @@
     </div>
     <div class="main">
         <table>
-
+            <thead>
+                <tr>
+                    <th>Title</th>
+                    <th>Author</th>
+                    <th>Pages</th>
+                    <th>Finished</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Harry Potter and the Sorcerers Stone</td>
+                    <td>Joanne Rowling</td>
+                    <td>369</td>
+                    <td>No</td>
+                    <td>✖</td>
+                </tr>
+                <tr>
+                    <td>Harry Potter and the Sorcerers Stone</td>
+                    <td>Joanne Rowling</td>
+                    <td>369</td>
+                    <td>No</td>
+                    <td>✖</td>
+                </tr>
+                <tr>
+                    <td>Harry Potter and the Sorcerers Stone</td>
+                    <td>Joanne Rowling</td>
+                    <td>369</td>
+                    <td>No</td>
+                    <td>✖</td>
+                </tr>
+            </tbody>
         </table>
     </div>
 </body>
