add id to html for JS use

--- a/index.html
+++ b/index.html
@@ -33,15 +33,15 @@
                             <label id="radio-label">Did you finish the book?</label><br>
                         </div>
                         <div>
-                            <input type="radio" id="yes" name="read" value="yes" required>
+                            <input type="radio" id="read" name="read" value="yes" required>
                             <label for="yes">Yes</label><br>    
                         </div>
                         <div>
-                            <input type="radio" id="no" name="read" value="no" required>
+                            <input type="radio" id="read" name="read" value="no" required>
                             <label for="no">No</label><br>  
                         </div>
                     </div>
-                <button type="submit"><label for="submit">Add New Book</label></button>
+                <button type="submit" id="submit"><label for="submit">Add New Book</label></button>
         </form>
     </div>
     <div class="main">
