structure for webpack

--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="normalize.css">
     <script src="./bundle.js" defer></script>
-    <title>My Library</title>
-<script defer src="bundlea1e673450381c49c3bfe.js"></script></head>
+    <title><%= htmlWebpackPlugin.options.title %></title>
+</head>
 <body>
     <div class="sidebar">
         <div class="top">
