--- a/src/template.html
+++ b/src/template.html
@@ -43,6 +43,7 @@
                     </div>
                 <button type="submit" onclick="addBookToLibrary()" id="submit"><label for="submit">Add New Book</label></button>
         </form>
+        <button>Sign In</button>
     </div>
     <div class="main">
         <table>
